--- a/css/simplegrid.css
+++ b/css/simplegrid.css
@@ -24,7 +24,7 @@ body {
 .grid {
 	width: 100%;
 	max-width: 1140px;
-	min-width: 755px;
+	min-width: 0; /*755px;*/
 	margin: 0 auto;
 	overflow: hidden;
 }
